<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!--Application Title-->
    <string name="app_name">Quake Report</string>

    <!--Default text to show with earthquake location("Near the Pacific Ridge")
        if no specific Kilometer distance from the primary location is given for that event-->
    <string name="near_the">Near</string>

    <!--Strings for NO RESOURCE conditions-->
    <string name="no_earthquakes">No Earthquakes Found, try again later</string>
    <string name="no_internet_connection">No Internet Connection, try again later</string>

    <!--Rubric required Settings Menu Item [CHAR LIMIT=NONE]-->
    <string name="settings_menu_item">Settings</string>
    <!--Settings Activity Title-->
    <string name="settings_title">Earthquake Settings</string>

    <!--Strings for Minimum Magnitude Preference [CHAR LIMIT=30]-->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">0</string>

    <!--Strings for Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable = "false">order_by</string>
    <string name="settings_order_by_default" translatable="false">
        @string/settings_order_by_magnitude_value</string>

    <!--Label for order by magnitude option [CHAR LIMIT=20]-->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!--Label for Order-by Most Recent menu option-->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
</resources>
